# cambrian

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  skills-lock.json
.beads/: .beads-credential-key  config.yaml  metadata.json
docker/: Dockerfile  build.sh
docs/: M2-STAGE1-SUCCESS-CHECKLIST.md
lab-journal/: TEMPLATE.md  index.md  journal-2026-03-21.md  journal-2026-03-23.md  journal-2026-03-24.md  journal-2026-03-24b.md  journal-2026-03-24c.md  journal-2026-03-24d.md  journal-2026-03-24e.md  journal-2026-03-26.md  journal-2026-03-27.md  journal-2026-03-29.md  journal-2026-03-30.md  journal-2026-03-30b.md  journal-2026-03-30c.md  journal-2026-03-31.md  journal-2026-03-31b.md  journal-2026-03-31c.md  journal-2026-03-31d.md  journal-2026-03-31e.md  journal-2026-03-31f.md  journal-2026-03-31g.md  journal-2026-04-01-summary.md  journal-2026-04-01.md  journal-2026-04-01b.md  journal-2026-04-01c.md  journal-2026-04-02.md  journal-2026-04-03.md  journal-2026-04-03b.md  journal-2026-04-03c.md  journal-2026-04-03d.md  journal-2026-04-03e.md  journal-2026-04-03f.md  journal-2026-04-03g.md  journal-2026-04-03h.md  journal-2026-04-03i.md  journal-2026-04-03j.md  journal-2026-04-03k.md  journal-2026-04-03l.md  journal-2026-04-03m.md  (+11 more)
research/: 01-self-modifying-systems.md  02-autonomous-coding-agents.md  03-evolutionary-genetic-code.md  04-cambrian-architecture-analysis.md  05-adjacent-paradigms.md  06-proposal.md  07-agentic-evolution-infrastructure.md  08-adversarial-review.md
scripts/: distill_campaign.py  (+7 more)
(+32 files in other folders)
