[project]
name = "cambrian"
version = "0.1.0"
description = "Self-reproducing code factory — Supervisor and Test Rig"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.10",
    "aiodocker>=0.22",
    "pydantic>=2.0",
    "structlog>=24.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
